migrate aggregates to jsonb